改变了控制台的显示信息，现在控制台会显示提示出现的时间。 移除了不必要的配置项